<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Claim Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="new_claim">New Claim</string>
    <string name="email">E-mail</string>
    <string name="edit">View/Edit</string>
    <string name="Save">Done</string>
    <string name="date">28/01/2015</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">20.25</string>
    <string name="CAD">CAD</string>
    <string name="end_date">Trip End</string>
    <string name="start_date">Trip Start</string>
    <string name="back">Cancel</string>
    <string name="enter_amt">Enter Cost</string>
    <string name="claims">Claims</string>
    
    <string-array name="currency_array">
        <item>CAD</item>
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>NZD</item>
        <item>ZAR</item>  
        <item>CHF</item>
        <item>HKD</item>
        <item>CNY</item>
        <item>KRW</item>
        <item>MXN</item>
    </string-array>
    
</resources>
