<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newexpense"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <EditText
        android:id="@+id/expense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        android:textColor="#ffffff"
        android:textColorHint="@android:color/holo_blue_light" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/expense_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/expense_name"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="#ffffff"
        android:textColorHint="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/expense_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="main_menu"
        android:text="@string/back"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/expense_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expense_back"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/back"
        android:onClick="new_expense"
        android:text="@string/Save"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/amountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/expense_name"
        android:text="@string/enter_amt"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amountTV"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textColorHint="@android:color/holo_blue_light" />

    <Spinner
        android:id="@+id/currency_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/expense_amount"
        android:entries="@array/currency_array" />

    <EditText
        android:id="@+id/expense_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currency_spinner"
        android:ems="10"
        android:inputType="date"
        android:text="@string/date"
        android:textColor="#ffffff" />

</RelativeLayout>