<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jdrozdow.claimtracker.MainActivity" >

    <Button
        android:id="@+id/new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="change_newclaim_screen"
        android:text="@string/new_claim"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/new_button"
        android:layout_alignBottom="@+id/new_button"
        android:layout_alignParentEnd="true"
        android:text="@string/email"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_claimsID"
        android:layout_toEndOf="@+id/new_button"
        android:layout_toStartOf="@+id/email_button"
        android:onClick="edit_claim"
        android:text="@string/edit"
        android:textColor="#ffffff" />

    <ListView
        android:id="@+id/list_claimsID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/new_button"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg2" >

    </ListView>

    <TextView
        android:id="@+id/claims"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/new_button"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/list_claimsID"
        android:text="@string/claims"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</RelativeLayout>