<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <Button
        android:id="@+id/new_claim_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="update_claim"
        android:text="@string/Save"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/new_claim_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/claim_description"
        android:ems="10"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/claim_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/claim_date_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_claim_name"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="date"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/enter_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_claim_name"
        android:layout_marginTop="26dp"
        android:text="@string/start_date"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/enter_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/claim_date_start"
        android:text="@string/end_date"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/claim_date_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enter_end_date"
        android:ems="10"
        android:inputType="date"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/new_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_claim_ok"
        android:layout_alignParentRight="true"
        android:onClick="change_newexpense_screen"
        android:text="@string/add_expense"
        android:textColor="#ffffff" />

    <ListView
        android:id="@+id/expense_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total"
        android:layout_alignBottom="@+id/new_expense_button"
        android:layout_below="@+id/claim_date_end"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/new_expense_button"
        android:background="@drawable/bg2" >

    </ListView>

    <Button
        android:id="@+id/claim_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/new_claim_ok"
        android:onClick="main_menu"
        android:text="@string/back"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_expense_button"
        android:layout_alignParentRight="true"
        android:contentDescription="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
